[package]
name = "loom-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "loom"
path = "src/main.rs"

[lib]
name = "loom_cli"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
openloom-engine = { path = "../../engine" }
openloom-server = { path = "../../server" }
openloom-models = { path = "../../models" }
dirs = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
loom-absolute-path = { workspace = true }
loom-arg0 = { workspace = true }
loom-cli-utils = { workspace = true }
loom-config = { workspace = true }
loom-execpolicy = { workspace = true }
loom-features = { workspace = true }
loom-install-context = { workspace = true }
loom-otel-stub = { workspace = true }
loom-protocol = { workspace = true }
loom-terminal-detection = { workspace = true }
loom-tui = { workspace = true }
loom-tui-stubs = { workspace = true }
loom-path-utils = { workspace = true }
crossterm = { workspace = true }
http = { workspace = true }
libc = { workspace = true }
owo-colors = { workspace = true }
regex-lite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-color = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "time",
] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
ctrlc = "3.5.2"

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
