[package]
edition = "2024"
license = "Apache-2.0"
name = "loom-core-plugins"
version = "0.2.0"

[lib]
doctest = false
name = "loom_core_plugins"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
loom-shim-stubs = { workspace = true }
loom-app-server-protocol = { workspace = true }
loom-core-skills = { workspace = true }
loom-exec-server = { workspace = true }
loom-git-utils = { workspace = true }
loom-hooks = { workspace = true }
loom-protocol = { workspace = true }
loom-absolute-path = { workspace = true }
loom-plugins = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt", "time"] }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
libc = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
