[package]
edition.workspace = true
license.workspace = true
name = "loom-core-skills"
version.workspace = true

[lib]
doctest = false
name = "loom_core_skills"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
loom-shim-stubs = { workspace = true }
loom-app-server-protocol = { workspace = true }
loom-exec-server = { workspace = true }
loom-protocol = { workspace = true }
loom-skills = { workspace = true }
loom-absolute-path = { workspace = true }
loom-plugins = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shlex = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt"] }
toml = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
