[package]
name = "loom-exec-server"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"

[lib]
doctest = false

[dependencies]
arc-swap = "1.9.0"
async-trait = "0.1.89"
axum = { version = "0.7", features = ["http1", "tokio", "ws"] }
base64 = "0.22.1"
bytes = "1.10.1"
futures = { version = "0.3", default-features = false }
prost = "0.14.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
toml = "0.9.5"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
uuid = { version = "1", features = ["v4"] }
loom-app-server-protocol = { path = "../app-server-protocol" }
loom-shim-stubs = { path = "../../loom-utils/shim-stubs" }
loom-file-system = { path = "../../loom-utils/file-system" }
loom-protocol = { path = "../protocol" }
loom-sandboxing = { path = "../sandboxing" }
loom-absolute-path = { path = "../../loom-utils/absolute-path" }
loom-rustls-provider = { path = "../../loom-utils/rustls-provider" }
