[package]
name = "loom-exec"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
autotests = false

[[bin]]
name = "loom-exec"
path = "src/main.rs"

[lib]
name = "loom_exec"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
loom-arg0 = { workspace = true }
loom-app-server-client = { workspace = true }
loom-app-server-protocol = { workspace = true }
loom-config = { workspace = true }
loom-git-utils = { workspace = true }
loom-protocol = { workspace = true }
loom-absolute-path = { workspace = true }
loom-cli-utils = { workspace = true }
loom-oss = { workspace = true }
loom-sandbox-summary = { workspace = true }
loom-shim-stubs = { workspace = true }
loom-tui-stubs = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ts-rs = { workspace = true, features = [
    "uuid-impl",
    "serde-json-impl",
    "no-serde-warnings",
] }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
wiremock = { workspace = true }
